minitrace-macro/tests/ui/err/has-too-many-arguments.stderr
error: expected `#[trace(name = <str>)]` or `#[trace(enter_on_poll = <bool>)]`
 --> tests/ui/err/has-too-many-arguments.rs:3:1
  |
3 | #[trace(a, b)]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
